--- a/package.json
+++ b/package.json
@@ -11,16 +11,20 @@
   },
   "dependencies": {
     "antd": "^5.15.3",
+    "axios": "^1.6.8",
+    "cors": "^2.8.5",
     "firebase": "^10.8.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10",
     "react-google-button": "^0.7.2",
     "react-icons": "^5.0.1",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.22.3",
+    "react-to-print": "^2.15.1",
     "react-toastify": "^10.0.5",
     "react-uuid": "^2.0.0",
     "sass": "^1.71.1",
